# prism-genomics

./: .dockerignore  .env.example  .gitignore  README.md  SETUP.md  docker-compose.yml  frontend-plan.md  frontend.md  main.py  pyproject.toml
Code/: README.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
backend/data/models/: training_metrics.json
backend/data/processed/: labels.pt  snp_metadata.json
backend/data/raw/: README.md
backend/data/test_patients/: patient_HG00265.vcf  patient_HG01104.vcf  patient_HG01280.vcf  patient_HG01383.vcf  patient_HG01675.vcf  patient_HG02385.vcf  patient_HG02603.vcf  patient_HG02941.vcf  patient_NA19782.vcf  patient_NA20867.vcf
backend/prisma/: schema.prisma
backend/prisma/migrations/20260224105511_add_user/: migration.sql
backend/prisma/migrations/20260224135924_add_encrypted_private_key/: migration.sql
backend/prisma/migrations/20260224154004_add_genomic_files/: migration.sql
backend/prisma/migrations/20260224163122_add_analysis_json/: migration.sql
backend/prisma/migrations/20260224171430_add_access_request/: migration.sql
backend/scripts/: generate_patient_vcfs.py  train.py
backend/src/: __init__.py  config.py
backend/src/api/: __init__.py  auth.py  doctor.py  inference.py  patient.py  server.py
backend/src/data/: __init__.py  dataset.py  feature_extractor.py
backend/src/data_preparation/: vcf_processor.py
backend/src/model/: __init__.py  architecture.py  trainer.py
backend/src/prs_engine/: normalizer.py
blockchain/: .env.example  .gitignore  (+4 more)
(+78 files in other folders)
