[project]
name = "prism-genomics"
version = "0.1.0"
description = "Polygenic Risk Intelligence for Secure Medicine"
readme = "README.md"
requires-python = ">=3.12.12"
dependencies = [
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "scikit-learn>=1.4.0",
    "xgboost>=2.0.0",
    "joblib>=1.3.0",
    "tqdm>=4.66.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "pyarrow>=15.0.0",
    "fastapi>=0.129.0",
    "uvicorn>=0.40.0",
    "python-multipart>=0.0.22",
    "cryptography>=46.0.5",
    "blake3>=1.0.8",
]

[project.scripts]
prepare-dataset = "src.data_preparation.prepare_dataset:main"
